# EquipmentManagementSystem

./: .gitignore  CMakeLists.txt
equipment_simulation/: CMakeLists.txt
equipment_simulation/include/: equipment_stimulator.h  simulation_manager.h  simulator_connections.h  simulator_database_reader.h
equipment_simulation/src/: equipment_stimulator.cpp  main.cpp  simulation_manager.cpp  simulator_connections.cpp  simulator_database_reader.cpp  test_integration.cpp  test_performance.cpp  test_simulation_manager.cpp  test_simulator_connections.cpp
include/: connection_manager.h  database_manager.h  epoll.h  equipment.h  equipment_management_server.h  protocol_parser.h  socket.h
qt_client/EquipmentManagementClient/: CMakeLists.txt  alarmwidget.cpp  alarmwidget.h  centeraligndelegate.cpp  centeraligndelegate.h  dashboardwidget.cpp  dashboardwidget.h  devicecard.cpp  devicecard.h  energystatisticswidget.cpp  energystatisticswidget.h  equipmentmanagerwidget.cpp  equipmentmanagerwidget.h  equipmentmanagerwidget.ui  filtertoolbar.cpp  filtertoolbar.h  logindialog.cpp  logindialog.h  logindialog.ui  logindialog.ui.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message_buffer.cpp  message_buffer.h  messagedispatcher.cpp  messagedispatcher.h  myreservationwidget.cpp  myreservationwidget.h  placecard.cpp  placecard.h  placequerycard.cpp  placequerycard.h  protocol_parser.cpp  protocol_parser.h  reservationcard.cpp  reservationcard.h  reservationequipmentcontrolwidget.cpp  reservationequipmentcontrolwidget.h  (+11 more)
qt_client/EquipmentManagementClient/resources/: style.qss
server/: CMakeLists.txt  create_tables.sql
server/include/: connection_manager.h  database_manager.h  epoll.h  equipment_management_server.h  equipment_manager.h
server/src/: connection_manager.cpp  database_manager.cpp  epoll.cpp  equipment.cpp  equipment_management_server.cpp  equipment_manager.cpp  main.cpp  protocol_parse.cpp  socket.cpp
shared_components/: CMakeLists.txt
shared_components/include/: equipment.h  message_buffer.h  protocol_parser.h  socket.h
shared_components/src/: epoll.cpp  equipment.cpp  protocol_parse.cpp  protocol_parser.cpp  socket.cpp
src/: database_manager.cpp  equipment_management_server.cpp  equipment_manager.cpp  main.cpp  message_buffer.cpp  protocol_parse.cpp
test/: CMakeLists.txt
test/src/: test_heartbeat.cpp
